@@ -1,3 +1,8 @@
+- enhancing buildings support
+- build animation support
+- editor events/trigger
+- editor player position tool
+- editor bob tool
 
 build-7:
 - many new buildings
